# cadre

cmake/: PicoDebugProbe.cmake
microfiche/: CMakeLists.txt  CMakePresets.json
microfiche/include/: lwipopts.h
microfiche/src/: main.c  webserver.c
